--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,10 @@
                 <input type="email" id="email" name="email" placeholder="EMAIL" required>
 
                 <input type="password" id="password" name="password" placeholder="PASSWORD" required>
+                <div style="margin: 8px 0;">
+                    <input type="checkbox" id="show-password" onclick="togglePasswordVisibility()">
+                    <label for="show-password">Show Password</label>
+                </div>
                 <p class="forgot-password"><a href="#">forgot password?</a></p>
                 <p class="or-text"> ━━━━━━━or━━━━━━━</p>
                 <button type="button" class="google-login">
