--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
+    <div class="background-text">LARO</div>
+    <div class="background-text2">LARO</div>
     <div class="container">
         <div class="form-container">
             <h1>WELCOME!</h1>
